# x_with_langgraph

./: .gitignore  LICENSE  README.md  agent1.ipynb  agent_tools.py  agents1_tools.py  async.py  basic_arch.ipynb  mod1_1.ipynb  mod1_2.ipynb  mod2_1.ipynb  mod2_5.ipynb  mod2_6.ipynb  mod3_3.ipynb  pyproject.toml  test1.ipynb
0_training/: mod3_3.ipynb
0_training/async/: async.ipynb  async.py
c_async/: async_v2.py
langchain-academy/module-0/: basics.ipynb
langchain-academy/module-1/: simple-graph.ipynb
