[project]
name = "x-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli>=0.4.12",
    "langgraph-sdk>=0.3.4",
    "langsmith>=0.6.9",
    "notebook>=7.5.3",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
